# osrs-hiscore-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
deploy/: deploy.sh
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: hiscore-proxy.yml  ingress.yml
deploy/scripts/: deploy.sh
src/: cors.rs  error.rs  hiscore.rs  main.rs
